# alx-low_level_programming

./: README.md
0x00-hello_world/: 0-preprocessor  4-puts.c  5-printf.c  6-size.c
0x01-variables_if_else_while/: .0-positive_or_negative.c.swp  0-positive_or_negative.c  1-last_digit.c  2-print_alphabet.c  3-print_alphabets.c  4-print_alphabt.c  5-print_numbers.c  6-print_numberz.c  7-print_tebahpla.c  8-print_base16.c  9-print_comb.c
0x02-functions_nested_loops/: 0-putchar.c  1-alphabet.c  10-add.c  11-print_to_98.c  2-print_alphabet_x10.c  5-sign.c  7-print_last_digit.c  8-24_hours.c  9-times_table.c
0x03-debugging/: 0-main.c  2-largest_number.c  3-print_remaining_days.c  main.h
0x04-more_functions_nested_loops/: 0-isupper.c  10-print_triangle.c  100-prime_factor.c  101-print_number.c  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-print_diagonal.c  8-print_square.c  9-fizz_buzz.c
0x05-pointers_arrays_strings/: 0-reset_to_98.c  1-swap.c  4-print_rev.c  5-rev_string.c  6-puts2.c  7-puts_half.c  8-print_array.c  9-strcpy.c
0x06-pointers_arrays_strings/: 0-strcat.c  2-strncpy.c  4-rev_array.c  5-string_toupper.c  6-cap_string.c  7-leet.c
0x07-pointers_arrays_strings/: 0-memset.c  2-strchr.c  5-strstr.c  8-print_diagsums.c  main.h
0x08-recursion/: 0-puts_recursion.c  1-print_rev_recursion.c  100-is_palindrome.c  101-wildcmp.c  2-strlen_recursion.c  3-factorial.c  4-pow_recursion.c  5-sqrt_recursion.c  6-is_prime_number.c  CMakeLists.txt  main.c
0x09-static_libraries/: 1-isdigit.c  1-memcpy.c  1-strncat.c  100-atoi.c  (+12 more)
(+89 files in other folders)
