cmake_minimum_required(VERSION 3.24)
project(0x08_recursion C)

set(CMAKE_C_STANDARD 11)

add_executable(0x08_recursion main.c main.h 0-puts_recursion.c 1-print_rev_recursion.c 2-strlen_recursion.c 3-factorial.c 4-pow_recursion.c 5-sqrt_recursion.c 6-is_prime_number.c 100-is_palindrome.c 101-wildcmp.c)
